# intelligent-calendar-agent

./: .gitignore  LICENSE  README.md  calendar_agent.py  pyproject.toml  run_agent.py
agent/: __init__.py  agent.py  prompt.py
agent/tools/: __init__.py  calendar_tools.py  prompt_tools.py  test.ipynb  weather_tools.py
